--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/uuid": "^8.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "5",
+    "redux": "^4.2.0",
     "typescript": "~3.7.2",
     "uuid": "^8.3.2"
   },
